--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -1,6 +1,6 @@
 ---
 title: "Roomie IT Hospitaliy Robot"
-excerpt: "<br/><img src='/images/totalplaybot.png' style='border-radius: 10%;'>"
+excerpt: "<br/><img src='images/totalplaybot.png' style='border-radius: 10%;'>"
 collection: portfolio
 ---
 
