--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "PiBOT"
-excerpt: "<br/><img src='/images/pibot.png' style='border-radius: 10%;'>"
+excerpt: "<br/><img src='images/pibot.png' style='border-radius: 10%;'>"
 collection: portfolio
 ---
 
